src/objects/VenueOffice__c.object
<CustomObject>
    <description>Junction object linking venues with LNE internal offices, indicating that office may manage events and booking at the venue</description>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Office Venues</relationshipLabel>
        <relationshipName>OfficeVenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryOffice__c</fullName>
        <description>Checks to see if the office is the primary office of the venue record</description>
        <formula>IF(Office__c  =  Venue__r.PrimaryOffice__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Venue Offices</relationshipLabel>
        <relationshipName>VenueOffices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Venue-Office</label>
    <nameField>
        <displayFormat>VO-{000000}</displayFormat>
        <label>Venue-Office ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Venue-Offices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>